[project]
name = "hospital-rl-env"
version = "0.1.0"
description = "Hospital Resource Allocation OpenEnv Environment"
authors = [{ name = "Augustine" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
env_name = "hospital"
entry_point = "server.app:app"