[project]
name = "hospital-rl-env"
version = "0.1.0"
description = "Hospital Resource Allocation OpenEnv Environment"
authors = [{ name = "Augustine" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_name = "hospital"
entry_point = "server.app:main"